J'ai doccumenté d'autres fonctiojnnalités
